style fix z-index

--- a/css/img_global.css
+++ b/css/img_global.css
@@ -436,7 +436,7 @@ border-radius: 5px;
 	padding: 3px;
 	border-radius: 8px;
 	white-space: nowrap;
-	z-index: 9999;
+	z-index: 10;
 	opacity: 0.85;
 	-webkit-transition: opacity 0.2s;
 	-moz-transition: opacity 0.2s;
